# jihanki-vision

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  button_strip.cpp  display.cpp  display.hpp  extract_drinks.cpp  extract_drinks_draw.cpp  extract_drinks_write.cpp  fixperspective.cpp  fixperspective_display.cpp  fixperspective_display.hpp  fixperspective_draw.cpp  generate_histogram.cpp  histogram.cpp  histogram.hpp  lines.cpp  lines.hpp  perspective_lines.cpp  perspective_lines.hpp  run_length.cpp  threshold.cpp  threshold.hpp  trim_rect.cpp  trim_rect.hpp
src/extract_drinks/: CMakeLists.txt  button_strip.cpp  button_strip.hpp  extract_drinks.cpp  extract_drinks_draw.cpp  extract_drinks_draw.hpp  extract_drinks_write.hpp  run_length.hpp  threshold.cpp
src/fixperspective/: CMakeLists.txt  cabinet.cpp  cabinet.hpp  calibrator.cpp  detect.cpp  detect.hpp  fixperspective.cpp  fixperspective_draw.cpp  fixperspective_draw.hpp  perspective_lines.cpp  perspective_lines.hpp
src/generate_histogram/: CMakeLists.txt
src/identify_drink/: CMakeLists.txt  identify_drink.cpp
src/trim_drink/: CMakeLists.txt  trim_drink.cpp
